refactor: 포맷 수정